service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-biomedicale-nmm
spec:
  selector:
    app: app-biomedicale-nmm
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
